<resources>
    <string name="app_name">Nguge Hills Lodge POS</string>
    <string name="first_slide">First slide</string>
    <string name="second_slide">Second slide</string>
    <string name="random_text">Random text</string>
    <string name="get_started">Get started</string>
    <string name="third_slide">Third slide</string>
    <string name="fourth_slide">Fourth slide</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Welcome Text</string>
    <string name="welcome_decsr">Welcome Description</string>
    <string name="payment_title">Payment text</string>
    <string name="payment_descr">Payment description</string>
    <string name="food_title">Food title</string>
    <string name="food_text">Food description</string>
    <string name="room_booking_text">Room booking text</string>
    <string name="room_booking_descr">Room booking description</string>
    <string name="designer">Created By Odhiambo Joseph</string>
    <string name="sign_in">Sign in</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_text">Login</string>
    <string name="register_prompt">Register Now</string>
    <string name="use_other_methods">Use Other Methods</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="retype_password">Retype Password</string>
    <string name="i_have_read_and_understood_the">I have read and understood the</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="i_accept_the">I accept the</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login_with_facebook">Register with Facebook</string>
    <string name="login_with_google">Register with Google</string>
    <string name="town_or_village_name">Town or Village name</string>
    <string name="referral_code">Referral Code</string>
    <string name="hero_banner">Hero banner</string>
    <string name="login_instead">Login instead</string>
    <string name="request_password_reset">Request Password Reset</string>
    <string name="no_connection">Kindly connect to a WIFI network or enable Mobile Data</string>
    <string name="no_internet">No Internet connection</string>
    <string name="no_connection_message">Cannot connect to Swiva servers</string>
    <string name="cancel">Cancel</string>
    <string name="connect_now">Connect Now</string>
</resources>