<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/black"
                    android:text="@string/sign_up"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/login_text" />
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/textName"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="@string/name"
                            android:autofillHints="name" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/textEmail"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/email_hint"
                            android:autofillHints="emailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/textMobile"
                            style="@style/modifiedEditText"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:hint="@string/mobile_number"
                            android:autofillHints="phone" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputTown"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/textTown"
                            style="@style/modifiedEditText"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:hint="@string/town_or_village_name"
                            android:autofillHints="name" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/primary">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/password_hint"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputCPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/primary">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textCPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/retype_password"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputReferralCode"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/textReferralCode"
                            style="@style/modifiedEditText"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:hint="@string/referral_code"
                            android:autofillHints="name" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/accept_policy"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_have_read_and_understood_the"
                            android:textColor="@color/primary" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_dark"
                            android:text="@string/privacy_policy"
                            android:id="@+id/privacy_policy"
                            android:layout_marginStart="5dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/accept_tlc"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_accept_the"
                            android:textColor="@color/primary" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_dark"
                            android:text="@string/terms_conditions"
                            android:textSize="@dimen/text_size_small"
                            android:id="@+id/terms"
                            android:textStyle="bold"
                            android:layout_marginStart="5dp"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/registerButton"
                        style="@style/button"
                        android:text="@string/register"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin" />
                    <TextView
                        android:id="@+id/txtLogin"
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:text="@string/already_have_an_account"
                        android:layout_marginTop="@dimen/loginViewsMargin" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_weight="3"/>
                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/use_other_methods"
                    android:layout_weight="6"
                    android:textSize="12sp"
                    android:textAlignment="center"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_weight="3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp">
                <ImageView
                    android:id="@+id/btnFacebookRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    android:contentDescription="@string/login_with_facebook" />
                <ImageView
                    android:id="@+id/btnGoogleRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/login_with_google" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_left_side_bg" />
    <View
        android:layout_marginTop="1.5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_right_side_bg"/>
    <ImageView
        android:id="@+id/btnBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/back" />
</RelativeLayout>